bg-fixed header view at mobile break at 720px

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,8 +41,8 @@
         display: flex;
     }
 
-    .webMenu{
-
+    .web-menu{
+        display: none;
     }
 
     .logo{
